<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollResultado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ResultadoActivity">

    <TextView
        android:id="@+id/textviewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/labelResultadoPercentualGordura"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="214dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="14dp"
        android:paddingRight="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewResultado">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDensidadeCorporal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/titleDensidadeCorporal"
                    style="@style/styleTituloSecao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/contentDescriptionResultadosTestePercentualGordura"
                    android:focusable="true"
                    android:text="@string/labelTextTitleResultTestPercentualGordura"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewHeaderDensidadeCorporal"
                    style="@style/styleHeaderResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/labelTextViewHeaderDensidadeCorporal"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewResultadoDensidadeCorporal"
                    style="@style/styleValorResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/textViewPeso"
                    style="@style/styleValorResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <Button
        android:id="@+id/btnFecharResultados"
        android:layout_width="223dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/labelBotaoVoltar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>